tests/comp/sem/invalid/call_wrong-1.mj
class A {

	public void test() {
		/*** test(3); ***/
	}

	public static void main(String[] args) {
	}

}
